--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -29,6 +29,7 @@ workflows:
     publishing:
       email:
         recipients:
+          - f20250443@hyderabad.bits-pilani.ac.in
         notify:
           success: true
           failure: false
