--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
     instance_type: windows_x2
     environment:
       android_signing:
-        - keystore_reference
+        - Calc_keystore
       groups:
         - google_play
       vars:
