--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,7 +2,7 @@ workflows:
   native-android:
     name: Native Android
     max_build_duration: 120
-    instance_type: mac_mini
+    instance_type: windows
     environment:
       android_signing:
         - Calc_keystore
