--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file for all sub-projects/modules
 
 buildscript {
     repositories {
@@ -8,7 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.7.2'
         classpath 'com.google.gms:google-services:4.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10" // Added Kotlin plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0" // add Kotlin plugin
+        // NOTE: Do not put app dependencies here; use module build.gradle
     }
 }
 
@@ -21,20 +22,19 @@ allprojects {
     }
 }
 
-// Force all subprojects to use Java 11 and Kotlin jvmTarget
+// Force all subprojects to use Java 17
 subprojects {
     afterEvaluate { project ->
-        if (project.plugins.hasPlugin("com.android.application") || project.plugins.hasPlugin("com.android.library")) {
-            project.android {
+        if (project.hasProperty("android")) {
+            android {
                 compileOptions {
-                    sourceCompatibility JavaVersion.VERSION_11
-                    targetCompatibility JavaVersion.VERSION_11
+                    sourceCompatibility JavaVersion.VERSION_17
+                    targetCompatibility JavaVersion.VERSION_17
                 }
-                // Only set kotlinOptions if kotlin plugin is applied
-                if (project.plugins.hasPlugin("kotlin-android")) {
-                    kotlinOptions {
-                        jvmTarget = "11"
-                    }
+            }
+            project.tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+                kotlinOptions {
+                    jvmTarget = "17"
                 }
             }
         }
