--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,18 +3,16 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "com.calculator.app"
-    compileSdk 34 // set your compile SDK version directly
+    compileSdk rootProject.ext.compileSdkVersion  // 35
 
     defaultConfig {
         applicationId "com.calculator.app"
-        minSdk 24
-        targetSdk 34
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion  // 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
         aaptOptions {
-            // Ignore unnecessary files for web assets
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
@@ -37,13 +35,13 @@ android {
 }
 
 repositories {
-    flatDir {
+    flatDir{
         dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation "androidx.coordinatorlayout:coordinatorlayout:$androidxCoordinatorLayoutVersion"
     implementation "androidx.core:core-splashscreen:$coreSplashScreenVersion"
@@ -56,12 +54,11 @@ dependencies {
 
 apply from: 'capacitor.build.gradle'
 
-// Apply Google Services plugin if JSON exists
 try {
     def servicesJSON = file('google-services.json')
     if (servicesJSON.text) {
         apply plugin: 'com.google.gms.google-services'
     }
 } catch(Exception e) {
-    logger.info("google-services.json not found, push notifications won't work")
+    logger.info("google-services.json not found, Google services plugin not applied. Push Notifications won't work")
 }
