--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "com.calculator.app"
-    compileSdk rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion  // 35
 
     defaultConfig {
         applicationId "com.calculator.app"
         minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion  // 35
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -17,19 +17,8 @@ android {
         }
     }
 
-    // --- Signing Configs for Codemagic ---
-    signingConfigs {
-        release {
-            storeFile file(System.getenv("CM_KEYSTORE_FILE"))
-            storePassword System.getenv("CM_KEYSTORE_PASSWORD")
-            keyAlias System.getenv("CM_KEY_ALIAS")
-            keyPassword System.getenv("CM_KEY_PASSWORD")
-        }
-    }
-
     buildTypes {
         release {
-            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -46,7 +35,7 @@ android {
 }
 
 repositories {
-    flatDir {
+    flatDir{
         dirs '../capacitor-cordova-android-plugins/src/main/libs', 'libs'
     }
 }
@@ -65,12 +54,11 @@ dependencies {
 
 apply from: 'capacitor.build.gradle'
 
-// --- Optional: Google Services ---
 try {
     def servicesJSON = file('google-services.json')
     if (servicesJSON.text) {
         apply plugin: 'com.google.gms.google-services'
     }
 } catch(Exception e) {
-    logger.info("google-services.json not found. Push notifications won't work")
+    logger.info("google-services.json not found, Google services plugin not applied. Push Notifications won't work")
 }
