--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,25 +5,29 @@ workflows:
     environment:
       vars:
         PACKAGE_NAME: "com.calculator.app"
-      android_signing:
-        - Calc_keystore
+        android_signing:
+          - Calc_keystore
     scripts:
+      # 1. Install npm dependencies
       - name: Install npm packages
         script: |
           npm install
 
+      # 2. Build web assets (JS/CSS/HTML for Capacitor)
       - name: Build web assets
         script: |
           npm run build
 
+      # 3. Copy web assets into Android project
       - name: Copy web assets to Android
         script: |
           npx cap copy android
 
+      # 4. Clean & build Android release APK
       - name: Build release APK
         script: |
           cd android
-          ./gradlew assembleRelease
+          ./gradlew clean assembleRelease
 
     artifacts:
       - android/app/build/outputs/**/*.apk
